--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-locomotive-scroll": "^0.2.2",
+    "react-modal": "^3.16.1",
     "react-scroll": "^1.9.0",
     "react-type-animation": "^3.1.0",
     "resend": "^2.0.0",
