--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint-config-next": "13.4.15",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.12",
-    "locomotive-scroll": "^4.1.4",
+    "locomotive-scroll": "^5.0.0-beta.11",
     "next": "13.4.15",
     "postcss": "8.4.27",
     "react": "18.2.0",
