feature: add new project aroma haven; add image

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=X:\sweet_paranoia_icon\Sweet Paranoia Icon Theme\candy-icons\Windows Icons\key.ico,0
+IconResource=C:\WINDOWS\System32\SHELL32.dll,115
 [ViewState]
 Mode=
 Vid=
